# multi_agent_system

./: .coverage  .coverage.ibt15.ibt.kit.edu.83672.XXfnYgmx  .coverage.ibt15.ibt.kit.edu.94436.XuDnRgKx  .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schemas.py  seed_database.py  seed_music_data.py  setup.cfg  utils.py  workflow.py
.github/workflows/: Ci.yaml  ci.yaml
agents/: __init__.py  invoice_agent.py  music_agent.py
storage/chroma_db/: chroma.sqlite3
tests/: conftest.py  test_database.py  test_integration.py  test_invoice_agent.py  test_main.py  test_music_agent.py  test_schemas.py  test_utils.py  test_workflow.py
